--- a/notatki_cpp.vcxproj.filters
+++ b/notatki_cpp.vcxproj.filters
@@ -34,9 +34,6 @@
     <Filter Include="Pliki źródłowe\type_inference">
       <UniqueIdentifier>{56530edd-9e66-4a5b-a810-b51c660eaffb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Pliki źródłowe\vector_array">
-      <UniqueIdentifier>{b828e470-2991-4345-a17c-5c6738f15313}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Pliki źródłowe\loops">
       <UniqueIdentifier>{0c665e78-8daf-4f72-9749-4806a6fb16a6}</UniqueIdentifier>
     </Filter>
@@ -145,6 +142,12 @@
     <Filter Include="Pliki źródłowe\smart_pointers">
       <UniqueIdentifier>{56f954e5-2f7c-4d17-b672-813acd368c5c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Pliki źródłowe\containers">
+      <UniqueIdentifier>{f86e2def-de11-408b-aba9-33d985fc9c9f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Pliki źródłowe\iterators">
+      <UniqueIdentifier>{6c6e61fa-ec94-48a2-a781-83ef05b25978}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="using_namespace.cpp">
@@ -179,12 +182,6 @@
     </ClCompile>
     <ClCompile Include="auto.cpp">
       <Filter>Pliki źródłowe\type_inference</Filter>
-    </ClCompile>
-    <ClCompile Include="vector.cpp">
-      <Filter>Pliki źródłowe\vector_array</Filter>
-    </ClCompile>
-    <ClCompile Include="array.cpp">
-      <Filter>Pliki źródłowe\vector_array</Filter>
     </ClCompile>
     <ClCompile Include="initialization_variable.cpp">
       <Filter>Pliki źródłowe\initialization</Filter>
@@ -251,9 +248,6 @@
     </ClCompile>
     <ClCompile Include="const_value_pointer.cpp">
       <Filter>Pliki źródłowe\const</Filter>
-    </ClCompile>
-    <ClCompile Include="array_table.cpp">
-      <Filter>Pliki źródłowe\vector_array</Filter>
     </ClCompile>
     <ClCompile Include="recursive_main.cpp">
       <Filter>Pliki źródłowe\other</Filter>
@@ -587,6 +581,24 @@
     </ClCompile>
     <ClCompile Include="weak_ptr.cpp">
       <Filter>Pliki źródłowe\smart_pointers</Filter>
+    </ClCompile>
+    <ClCompile Include="vector.cpp">
+      <Filter>Pliki źródłowe\containers</Filter>
+    </ClCompile>
+    <ClCompile Include="array.cpp">
+      <Filter>Pliki źródłowe\containers</Filter>
+    </ClCompile>
+    <ClCompile Include="array_table.cpp">
+      <Filter>Pliki źródłowe\containers</Filter>
+    </ClCompile>
+    <ClCompile Include="containers_functions.cpp">
+      <Filter>Pliki źródłowe\containers</Filter>
+    </ClCompile>
+    <ClCompile Include="iterators.cpp">
+      <Filter>Pliki źródłowe\iterators</Filter>
+    </ClCompile>
+    <ClCompile Include="predefined_iterators.cpp">
+      <Filter>Pliki źródłowe\iterators</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
